# book-tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  book-tracker.kdev4  book-tracker.pro  book.cpp  book.h  bookdialog.cpp  bookdialog.h  bookdialog.ui  bookmodel.cpp  bookmodel.h  bookpropsmodel.cpp  bookpropsmodel.h  booktracker.desktop  booktracker.rc  confirmdialog.cpp  confirmdialog.h  confirmdialog.ui  costitemsmodel.cpp  costitemsmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.cpp  models.h  resource.qrc  reviewdialog.cpp  reviewdialog.h  reviewdialog.ui  savedialog.cpp  savedialog.h  savedialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  uilogic.cpp  uilogic.h
.kdev4/: book-tracker.kdev4
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
cmake/: DeployQt.cmake
resources/: setup (legacy).nsi  setup.nsi
